# Triangles

./: CMakeLists.txt  README.md
include/: triangles.hpp
src/: CMakeLists.txt  main.cpp  triangles.cpp
tests/: CMakeLists.txt  tests.cpp
